comment: delete pom comment how to load frontend resources, unuseful variant Dockerfile